fixed overflow

--- a/src/components/SearchBar/styles/ReactSelectStyles.scss
+++ b/src/components/SearchBar/styles/ReactSelectStyles.scss
@@ -1,8 +1,10 @@
 @import "../../../variables.scss";
 
+$select-width: 100px;
+
 div.react-select-container {
   height: 42px;
-  width: 130px;
+  width: $select-width;
   outline: 0;
   font-family: Helvetica, sans-serif;
   font-weight: 300;
@@ -22,7 +24,7 @@ div.react-select-container {
 
 div.react-select__control {
   height: 42px;
-  width: 130px;
+  width: $select-width;
   outline: 0;
   border-radius: 0px;
   border-width: 0px;
@@ -37,7 +39,7 @@ div.react-select__control {
 }
 
 div.react-select__menu {
-  width: 130px;
+  width: $select-width;
   border-radius: 0px;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
@@ -48,7 +50,7 @@ div.react-select__menu {
 
 div.react-select__menu-list {
   padding: 0px;
-  width: 130px;
+  width: $select-width;
   border-radius: 4px;
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
